updated app class in order to fetch announcements and files separately, updated getlatest function to retrieve the latest on each call, implemented urltostream api for netutils